# drf-auth

./: README.md  docker-compose.yml  pyproject.toml
drf_auth/: asgi.py  settings.py  urls.py  wsgi.py
things/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
things/migrations/: 0001_initial.py
